# gen-ai-audio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  logging.conf  manage.py  prestart.sh  pyproject.toml  run.sh  setup.cfg
api/: __init__.py  apps.py  middleware.py  serializers.py  views.py
api/services/: __init__.py  summarization.py  transcription.py
notetaker/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
scripts/: __init__.py  pull_local_model.py  setup_transcription_models.py
